name: ethjet
version: 0.5
synopsis: Binding to libethjet for Ethereum precompiled contracts
homepage: https://github.com/dapphub/libethjet
license: GPL-3
license-file: LICENSE
author: Mikael Brockman
maintainer: mikael@brockman.se
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -O2 -Wall -Werror
  exposed-modules:
    EVM.Precompiled
  build-depends:
    base == 4.*,
    bytestring

test-suite test
  default-language: Haskell2010
  hs-source-dirs: test
  ghc-options: -O2 -Wall -Werror
  type: exitcode-stdio-1.0
  main-is: Test.hs
  build-depends:
    base,
    bytestring,
    tasty
