name:
  hsevm
version:
  0.1.0.0
synopsis:
  Ethereum virtual machine evaluator
homepage:
  https://github.com/mbrock/hsevm
license:
  AGPL-3
license-file:
  LICENSE
author:
  Mikael Brockman
maintainer:
  mikael@brockman.se
build-type:
  Simple
cabal-version:
  >=1.10

library
  exposed-modules:
    EVM,
    EVM.ABI,
    EVM.Solidity,
    EVM.Keccak,
    EVM.Types,
    EVM.VMTest,
    EVM.Exec,
    EVM.Debug
  ghc-options:
    -O2 -Wall
  if impl(ghcjs)
    build-depends:
      ghcjs-base
    js-sources:
      jsbits/base64js.min.js
      jsbits/sha3.min.js
      jsbits/hsevm-keccak.js
  build-depends:
    aeson,
    base >=4.9 && <4.10,
    base16-bytestring,
    base64-bytestring,
    binary,
    bytestring,
    containers,
    cryptonite,
    data-dword,
    deepseq,
    directory,
    ghci-pretty,
    lens,
    lens-aeson,
    memory,
    mtl,
    optparse-generic,
    process,
    temporary,
    text,
    unordered-containers,
    vector,
    readline,
    QuickCheck,
    quickcheck-text,
    ansi-wl-pprint
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  default-extensions:
    BangPatterns,
    DeriveDataTypeable,
    DeriveGeneric,
    FlexibleContexts,
    GeneralizedNewtypeDeriving,
    LambdaCase,
    OverloadedStrings,
    Rank2Types,
    TypeFamilies

executable hsevm-cli
  default-language:
    Haskell2010
  hs-source-dirs:
    hsevm-cli
  main-is:
    hsevm-cli.hs
  ghc-options:
    -O2 -Wall -threaded
  build-depends:
    aeson,
    base,
    bytestring,
    containers,
    data-dword,
    directory,
    filepath,
    ghci-pretty,
    hsevm,
    readline,
    lens,
    lens-aeson,
    mtl,
    text,
    vector,
    unordered-containers,
    optparse-generic,
    base16-bytestring

test-suite test
  default-language:
    Haskell2010
  ghc-options:
    -O2 -Wall
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    test.hs
  build-depends:
    HUnit,
    QuickCheck,
    base >=4.9 && <4.10,
    ghci-pretty,
    hsevm,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    mtl,
    ghci-pretty,
    lens,
    text,
    here,
    bytestring,
    vector,
    binary
