name:
  hsevm
version:
  0.6.2
synopsis:
  Ethereum virtual machine evaluator
homepage:
  https://github.com/mbrock/hsevm
license:
  AGPL-3
license-file:
  LICENSE
author:
  Mikael Brockman
maintainer:
  mikael@brockman.se
build-type:
  Simple
cabal-version:
  >=1.10

library
  exposed-modules:
    EVM,
    EVM.ABI,
    EVM.Concrete,
    EVM.Debug,
    EVM.Exec,
    EVM.Keccak,
    EVM.Machine,
    EVM.Solidity,
    EVM.TTY,
    EVM.TTYCenteredList,
    EVM.Types,
    EVM.UnitTest,
    EVM.VMTest
  ghc-options:
    -O2 -Wall -Werror -Wno-deprecations
  if impl(ghcjs)
    build-depends:
      ghcjs-base
    js-sources:
      jsbits/base64js.min.js
      jsbits/sha3.min.js
      jsbits/hsevm-keccak.js
  build-depends:
    QuickCheck                        >= 2.9.2 && < 2.10,
    abstract-par                      >= 0.3 && < 0.4,
    aeson                             >= 1.0.0 && < 1.3,
    ansi-wl-pprint                    >= 0.6.7 && < 0.7,
    base                              >= 4.9 && < 4.10,
    base16-bytestring                 >= 0.1.1 && < 0.2,
    base64-bytestring                 >= 1.0.0 && < 1.1,
    binary                            >= 0.8.3 && < 0.9,
    brick                             >= 0.17.2 && < 0.19,
    bytestring                        >= 0.10.8 && < 0.11,
    cereal                            >= 0.5.4 && < 0.6,
    containers                        >= 0.5.7 && < 0.6,
    cryptonite                        >= 0.21 && < 0.24,
    data-dword                        >= 0.3.1 && < 0.4,
    deepseq                           >= 1.4.2 && < 1.5,
    directory                         >= 1.3.0 && < 1.4,
    filepath                          >= 1.4.1 && < 1.5,
    ghci-pretty                       >= 0.0.2 && < 0.1,
    lens                              >= 4.15.1 && < 4.16,
    lens-aeson                        >= 1.0.1 && < 1.1,
    memory                            >= 0.14.5 && < 0.15,
    monad-par                         >= 0.3 && < 0.4,
    mtl                               >= 2.2.1 && < 2.3,
    optparse-generic                  >= 1.1.5 && < 1.3,
    process                           >= 1.4.3 && < 1.5,
    quickcheck-text                   >= 0.1.2 && < 0.2,
    readline                          >= 1.0.3 && < 1.1,
    rosezipper                        >= 0.2 && < 0.3,
    scientific                        >= 0.3 && < 0.4,
    temporary                         >= 1.2.0 && < 1.3,
    text                              >= 1.2.2 && < 1.3,
    text-format                       >= 0.3.1 && < 0.4,
    unordered-containers              >= 0.2.8 && < 0.3,
    vector                            >= 0.11.0 && < 0.13,
    vty                               >= 5.15 && < 5.17
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  default-extensions:
    BangPatterns,
    DeriveDataTypeable,
    DeriveGeneric,
    FlexibleContexts,
    GeneralizedNewtypeDeriving,
    LambdaCase,
    OverloadedStrings,
    Rank2Types,
    TypeFamilies

executable hsevm
  default-language:
    Haskell2010
  hs-source-dirs:
    hsevm-cli
  main-is:
    hsevm-cli.hs
  ghc-options:
    -O2 -Wall -threaded -with-rtsopts=-N
  build-depends:
    QuickCheck                        >= 2.9.2 && < 2.10,
    aeson                             >= 1.0.0 && < 1.3,
    ansi-wl-pprint                    >= 0.6.7 && < 0.7,
    base                              >= 4.9 && < 4.10,
    base16-bytestring                 >= 0.1.1 && < 0.2,
    base64-bytestring                 >= 1.0.0 && < 1.1,
    binary                            >= 0.8.3 && < 0.9,
    brick                             >= 0.17.2 && < 0.19,
    bytestring                        >= 0.10.8 && < 0.11,
    containers                        >= 0.5.7 && < 0.6,
    cryptonite                        >= 0.21 && < 0.24,
    data-dword                        >= 0.3.1 && < 0.4,
    deepseq                           >= 1.4.2 && < 1.5,
    directory                         >= 1.3.0 && < 1.4,
    filepath                          >= 1.4.1 && < 1.5,
    ghci-pretty                       >= 0.0.2 && < 0.1,
    hsevm,
    lens                              >= 4.15.1 && < 4.16,
    lens-aeson                        >= 1.0.1 && < 1.1,
    memory                            >= 0.14.5 && < 0.15,
    mtl                               >= 2.2.1 && < 2.3,
    optparse-generic                  >= 1.1.5 && < 1.3,
    process                           >= 1.4.3 && < 1.5,
    quickcheck-text                   >= 0.1.2 && < 0.2,
    readline                          >= 1.0.3 && < 1.1,
    temporary                         >= 1.2.0 && < 1.3,
    text                              >= 1.2.2 && < 1.3,
    text-format                       >= 0.3.1 && < 0.4,
    unordered-containers              >= 0.2.8 && < 0.3,
    vector                            >= 0.11.0 && < 0.13,
    vty                               >= 5.15 && < 5.17

test-suite test
  default-language:
    Haskell2010
  ghc-options:
    -O2 -Wall
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    test.hs
  build-depends:
    HUnit,
    QuickCheck,
    base >=4.9 && <4.10,
    ghci-pretty,
    hsevm,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    mtl,
    ghci-pretty,
    lens,
    text,
    here,
    bytestring,
    vector,
    binary
