name: restless-git
version: 1.1
synopsis: Easy Git repository serialization
homepage: https://github.com/lessrest/restless-git
license: GPL-3
license-file: LICENSE
author: Mikael Brockman
maintainer: mikael@brockman.se
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -O2 -Wall -Werror
  exposed-modules:
    Restless.Git
  build-depends:
    base == 4.*,
    bytestring,
    containers,
    text,
    time,
    HSH

test-suite test
  default-language: Haskell2010
  hs-source-dirs: test
  ghc-options: -O2 -Wall -Werror
  type: exitcode-stdio-1.0
  main-is: Test.hs
  build-depends:
    base,
    bytestring,
    containers,
    restless-git,
    tasty,
    tasty-hunit,
    temporary,
    text
