name: jays
version: 1.20171121
synopsis: Rewrite of jshon
homepage: https://github.com/mbrock/jays
license: GPL-3
license-file: LICENSE
author: Mikael Brockman
maintainer: mikael@brockman.se
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -O2
  exposed-modules: Jays
  build-depends:
    base == 4.*,
    bytestring,
    containers,
    text,
    aeson,
    aeson-pretty,
    unordered-containers,
    vector

executable jays
  main-is: Main.hs
  hs-source-dirs: .
  default-language: Haskell2010
  ghc-options: -Wall -threaded -O2
  build-depends:
    base == 4.*,
    jays,
    bytestring,
    text,
    unix
    
test-suite test
  default-language: Haskell2010
  hs-source-dirs: test
  ghc-options: -Wall
  type: exitcode-stdio-1.0
  main-is: Test.hs
  build-depends:
    base,
    jays,
    bytestring,
    tasty,
    tasty-hunit,
    HUnit,
    aeson,
    text
