cabal-version:      2.4
name:               blade
version:            0.1.0.0

synopsis: Type safe smt2 abstraction layer
description: A minimal parallelized smt2 abstraction with strict type level guarantees

license:            GPL-3.0-only
author:             dxo
maintainer:         hackage@d-xo.org
extra-source-files: CHANGELOG.md

library
    exposed-modules:  SMT2.Build SMT2.Parse SMT2.Exec SMT2.Syntax.Typed
    other-modules:    SMT2.Type SMT2.Syntax.Untyped
    build-depends:    base>=4.15,
                      --base-compat>=0.12,
                      process,
                      containers,
                      mtl,
                      parameterized-utils,
                      template-haskell,
                      parsec,
                      text,
                      QuickCheck
    hs-source-dirs:   src
    default-language: Haskell2010

Test-Suite test
    type:             exitcode-stdio-1.0
    default-language: Haskell2010
    main-is:          Test.hs
    hs-source-dirs:   src/test
    build-depends:    blade,
                      base>=4.15,
                      parsec,
                      tasty-hunit            >= 0.10,
                      tasty-quickcheck       >= 0.10,
                      QuickCheck             >= 2.13.2,
                      tasty                  >= 1.2,
                      quickcheck-instances   >= 0.3,
                      quickcheck-transformer >= 0.3,


