cabal-version: 2.2
name:
  hevm
version:
  0.38
synopsis:
  Ethereum virtual machine evaluator
description:
  Hevm implements the Ethereum virtual machine semantics.
  .
  It can be used as a library, and it also comes with an executable
  that can run unit test suites, optionally with a visual TTY debugger.
homepage:
  https://github.com/dapphub/dapptools
license:
  AGPL-3.0-only
license-file:
  COPYING
author:
  Mikael Brockman
maintainer:
  mikael@brockman.se
category:
  Ethereum
build-type:
  Simple
data-files:
  run-blockchain-tests
  run-consensus-tests
extra-source-files:
  CHANGELOG.md

library
  exposed-modules:
    EVM,
    EVM.ABI,
    EVM.Concrete,
    EVM.Dapp,
    EVM.Dev,
    EVM.Debug,
    EVM.Demand,
    EVM.Emacs,
    EVM.Exec,
    EVM.Facts,
    EVM.Facts.Git,
    EVM.Flatten,
    EVM.Format,
    EVM.Fetch,
    EVM.FeeSchedule,
    EVM.Hexdump,
    EVM.Keccak,
    EVM.Op,
    EVM.Patricia,
    EVM.Precompiled,
    EVM.RLP,
    EVM.Solidity,
    EVM.Stepper,
    EVM.StorageLayout,
    EVM.Transaction,
    EVM.TTY,
    EVM.TTYCenteredList,
    EVM.Types,
    EVM.UnitTest,
    EVM.VMTest
  other-modules:
    Paths_hevm
  ghc-options:
    -Wall -Wno-deprecations
  extra-libraries:
    secp256k1, ff
  c-sources:
    ethjet/tinykeccak.c, ethjet/ethjet.c
  cxx-sources:
    ethjet/ethjet-ff.cc, ethjet/blake2.cc
  cxx-options:
    -std=c++0x
  install-includes:
    ethjet/tinykeccak.h, ethjet/ethjet.h, ethjet/ethjet-ff.h, ethjet/blake2.h
  build-depends:
    QuickCheck                        >= 2.9,
    abstract-par                      >= 0.3,
    aeson                             >= 1.0,
    ansi-wl-pprint                    >= 0.6,
    base                              >= 4.9 && < 5,
    base16-bytestring                 >= 0.1,
    base64-bytestring                 >= 1.0,
    binary                            >= 0.8,
    brick                             >= 0.18,
    bytestring                        >= 0.10,
    cborg                             >= 0.2,
    cereal                            >= 0.5,
    containers                        >= 0.5,
    cryptonite                        >= 0.21,
    data-dword                        >= 0.3,
    deepseq                           >= 1.4,
    directory                         >= 1.3,
    fgl                               >= 5.0,
    filepath                          >= 1.4,
    free                              >= 5.1,
    ghci-pretty                       >= 0.0,
    haskeline                         >= 0.7,
    lens                              >= 4.15,
    lens-aeson                        >= 1.0,
    megaparsec                        >= 6.0,
    memory                            >= 0.14,
    monad-par                         >= 0.3,
    mtl                               >= 2.2,
    multiset                          >= 0.3,
    operational                       >= 0.2,
    optparse-generic                  >= 1.1,
    process                           >= 1.4,
    quickcheck-text                   >= 0.1,
    restless-git                      >= 0.7,
    rosezipper                        >= 0.2,
    s-cargot                          >= 0.1,
    sbv                               >= 8.4,
    scientific                        >= 0.3,
    semver-range                      >= 0.2,
    temporary                         >= 1.2,
    text                              >= 1.2,
    text-format                       >= 0.3,
    time                              >= 1.8,
    transformers                      >= 0.5,
    tree-view                         == 0.5,
    unordered-containers              >= 0.2,
    vector                            >= 0.11,
    vty                               >= 5.15,
    witherable                        >= 0.2,
    wreq                              >= 0.5
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  default-extensions:
    BangPatterns,
    DeriveDataTypeable,
    DeriveGeneric,
    FlexibleContexts,
    GeneralizedNewtypeDeriving,
    LambdaCase,
    OverloadedStrings,
    Rank2Types,
    RecordWildCards,
    TypeFamilies,
    ViewPatterns

executable hevm
  default-language:
    Haskell2010
  hs-source-dirs:
    hevm-cli
  main-is:
    hevm-cli.hs
  ghc-options:
    -Wall -threaded -with-rtsopts=-N
  other-modules:
    Paths_hevm
  if os(darwin)
    ld-options: -Wl,-keep_dwarf_unwind
  build-depends:
    QuickCheck                        >= 2.9,
    aeson                             >= 1.0,
    ansi-wl-pprint                    >= 0.6,
    async                             == 2.*,
    base                              >= 4.9 && < 5,
    base16-bytestring                 >= 0.1,
    base64-bytestring                 >= 1.0,
    binary                            >= 0.8,
    brick                             >= 0.18,
    bytestring                        >= 0.10,
    containers                        >= 0.5,
    cryptonite                        >= 0.21,
    data-dword                        >= 0.3,
    deepseq                           >= 1.4,
    directory                         >= 1.3,
    filepath                          >= 1.4,
    free                              >= 5.1,
    ghci-pretty                       >= 0.0,
    hevm,
    lens                              >= 4.15,
    lens-aeson                        >= 1.0,
    memory                            >= 0.14,
    mtl                               >= 2.2,
    optparse-generic                  >= 1.1,
    operational                       >= 0.2,
    process                           >= 1.4,
    quickcheck-text                   >= 0.1,
    regex-tdfa                        >= 1.2,
    sbv                               >= 8.4,
    temporary                         >= 1.2,
    text                              >= 1.2,
    text-format                       >= 0.3,
    unordered-containers              >= 0.2,
    vector                            >= 0.11,
    vty                               >= 5.15

test-suite test
  default-language:
    Haskell2010
  ghc-options:
    -Wall
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    test.hs
  extra-libraries:
    secp256k1
  build-depends:
    HUnit >= 1.6,
    QuickCheck >= 2.9,
    base >= 4.9 && < 5,
    base16-bytestring >= 0.1,
    binary >= 0.8,
    bytestring >= 0.10,
    free >= 5.1,
    ghci-pretty >= 0.0.2,
    here >= 1.2,
    hevm,
    lens >= 4.16,
    mtl >= 2.2,
    tasty >= 1.0,
    tasty-hunit >= 0.10,
    tasty-quickcheck >= 0.9,
    text >= 1.2,
    vector >= 0.12
