cabal-version: 2.2
name:
  hevm
version:
  0.41.0
synopsis:
  Ethereum virtual machine evaluator
description:
  Hevm implements the Ethereum virtual machine semantics.
  .
  It can be used as a library, and it also comes with an executable
  that can run unit test suites, optionally with a visual TTY debugger.
homepage:
  https://github.com/dapphub/dapptools
license:
  AGPL-3.0-only
license-file:
  COPYING
author:
  Mikael Brockman, Martin Lundfall
maintainer:
  mikael@brockman.se, martin.lundfall@gmail.com
category:
  Ethereum
build-type:
  Simple
data-files:
  run-blockchain-tests
  run-consensus-tests
extra-source-files:
  CHANGELOG.md

library
  exposed-modules:
    EVM,
    EVM.ABI,
    EVM.Concrete,
    EVM.Dapp,
    EVM.Dev,
    EVM.Debug,
    EVM.Demand,
    EVM.Emacs,
    EVM.Exec,
    EVM.Facts,
    EVM.Facts.Git,
    EVM.Flatten,
    EVM.Format,
    EVM.Fetch,
    EVM.FeeSchedule,
    EVM.Hexdump,
    EVM.Keccak,
    EVM.Op,
    EVM.Patricia,
    EVM.Precompiled,
    EVM.RLP,
    EVM.Solidity,
    EVM.Stepper,
    EVM.StorageLayout,
    EVM.Symbolic,
    EVM.SymExec
    EVM.Transaction,
    EVM.TTY,
    EVM.TTYCenteredList,
    EVM.Types,
    EVM.UnitTest,
    EVM.VMTest
  other-modules:
    Paths_hevm
  autogen-modules:
    Paths_hevm
  ghc-options:
    -Wall -Wno-deprecations
  extra-libraries:
    secp256k1, ff
  c-sources:
    ethjet/tinykeccak.c, ethjet/ethjet.c
  cxx-sources:
    ethjet/ethjet-ff.cc, ethjet/blake2.cc
  cxx-options:
    -std=c++0x
  install-includes:
    ethjet/tinykeccak.h, ethjet/ethjet.h, ethjet/ethjet-ff.h, ethjet/blake2.h
  build-depends:
    QuickCheck,
    containers,
    deepseq,
    time,
    transformers,
    tree-view,
    abstract-par,
    aeson,
    bytestring,
    scientific,
    binary,
    text,
    unordered-containers,
    vector,
    ansi-wl-pprint,
    base16-bytestring,
    brick,
    megaparsec,
    mtl,
    directory,
    filepath,
    vty,
    cborg,
    cereal,
    cryptonite,
    memory,
    data-dword,
    fgl,
    free,
    haskeline,
    process,
    lens,
    lens-aeson,
    monad-par,
    multiset,
    operational,
    optparse-generic,
    quickcheck-text,
    restless-git,
    rosezipper,
    s-cargot,
    sbv                               >= 8.7.5,
    semver-range,
    temporary,
    text-format,
    witherable,
    wreq,
    regex-tdfa,
    base                              >= 4.9 && < 5
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  default-extensions:
    BangPatterns,
    DeriveDataTypeable,
    DeriveGeneric,
    FlexibleContexts,
    GeneralizedNewtypeDeriving,
    LambdaCase,
    OverloadedStrings,
    Rank2Types,
    RecordWildCards,
    TypeFamilies,
    ViewPatterns

executable hevm
  default-language:
    Haskell2010
  hs-source-dirs:
    hevm-cli
  main-is:
    hevm-cli.hs
  ghc-options:
    -Wall -threaded -with-rtsopts=-N
  other-modules:
    Paths_hevm
  if os(darwin)
    ld-options: -Wl,-keep_dwarf_unwind
  build-depends:
    QuickCheck,
    aeson,
    ansi-wl-pprint,
    async,
    base,
    base16-bytestring,
    binary,
    brick,
    bytestring,
    containers,
    cryptonite,
    data-dword,
    deepseq,
    directory,
    filepath,
    free,
    hevm,
    lens,
    lens-aeson,
    memory,
    mtl,
    optparse-generic,
    operational,
    process,
    quickcheck-text,
    regex-tdfa,
    sbv,
    temporary,
    text,
    text-format,
    unordered-containers,
    vector,
    vty

test-suite test
  default-language:
    Haskell2010
  ghc-options:
    -Wall
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    test.hs
  extra-libraries:
    secp256k1
  build-depends:
    HUnit >= 1.6,
    QuickCheck,
    base,
    base16-bytestring,
    binary,
    containers,
    bytestring,
    free,
    here,
    hevm,
    lens,
    mtl,
    tasty >= 1.0,
    tasty-hunit >= 0.10,
    tasty-quickcheck >= 0.9,
    text,
    vector,
    sbv
