name: restless-git
version: 0.7
category: Git
synopsis: Easy Git repository serialization
description:
  This is an opinionated library for reading and writing
  Haskell data from/to Git repositories.
homepage: https://github.com/dapphub/dapptools
license: GPL-3
license-file: COPYING
author: Mikael Brockman
maintainer: mikael@brockman.se
build-type: Simple
cabal-version: >=1.10

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  exposed-modules:
    Restless.Git
  build-depends:
    base == 4.*,
    bytestring >= 0.10,
    containers >= 0.5,
    text >= 1.2,
    time >= 1.8,
    HSH >= 2.1,
    clock >= 0.7

test-suite test
  default-language: Haskell2010
  hs-source-dirs: test
  ghc-options: -Wall
  type: exitcode-stdio-1.0
  main-is: Test.hs
  build-depends:
    base == 4.*,
    bytestring >= 0.10,
    containers >= 0.5,
    restless-git,
    tasty >= 1.0,
    tasty-hunit >= 0.10,
    temporary >= 1.1,
    text >= 1.2
