cabal-version:      2.4
name:               smt-hs
version:            0.1.0.0

synopsis: Type safe smt2 abstraction layer
description: A parallel by default, minimally abstracted smt2 abstraction, with strict type level guarantees

license:            GPL-3.0-only
author:             dxo
maintainer:         git@d-xo.org
extra-source-files: CHANGELOG.md

library
    exposed-modules:  SMT2
    build-depends:    base,
                      mtl,
    hs-source-dirs:   src
    default-language: Haskell2010
