cabal-version:      2.4
name:               smt-hs
version:            0.1.0.0

synopsis: Type safe smt2 abstraction layer
description: A parallel by default, minimally abstracted smt2 abstraction, with strict type level guarantees

license:            GPL-3.0-only
author:             dxo
maintainer:         git@d-xo.org
extra-source-files: CHANGELOG.md

library
    exposed-modules:  SMT2.Build SMT2.Parse SMT2.Type SMT2.Syntax.Typed SMT2.Syntax.Untyped
    build-depends:    base>=4.15,
                      --base-compat>=0.12,
                      containers,
                      mtl,
                      parameterized-utils,
                      template-haskell,
                      parsec,
                      text
    hs-source-dirs:   src
    default-language: Haskell2010
