[package]
name = "ethabi-cli"
version = "4.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
keywords = ["ethereum", "eth", "abi", "solidity", "cli"]
description = "Easy to use cli for conversion of ethereum contract calls to bytecode."
homepage = "https://github.com/paritytech/ethabi"
license = "MIT"

[dependencies]
rustc-hex = "1.0"
serde = "1.0"
serde_derive = "1.0"
docopt = "0.8.1"
ethabi = { version = "4.1", path = "../ethabi" }
error-chain = { version = "0.11.0", default-features = false }

[features]
backtrace = ["error-chain/backtrace"]

[[bin]]
name = "ethabi"
path = "src/main.rs"
